fix todo-2 r4
